fix card alignment issue after live coding
fixed using padding instead of margin in .card | set width in % in .card

--- a/css/style.css
+++ b/css/style.css
@@ -16,9 +16,9 @@
     margin: 1rem auto;
 }
 .card{
-    margin: 0 5px;
+    padding: 0 10px;
     float:left;
-    width: 349px;
+    width: 33.33%;
 }
 .img_container{
     position:relative;
@@ -77,7 +77,6 @@
 
 /* description txt */
 .description{
-    /* float:left; */
     padding-top: .5rem;
     margin-bottom:2rem;
 }
